Fix spacing on home page hash art

--- a/src/assets/styles/partials/pages/_home.scss
+++ b/src/assets/styles/partials/pages/_home.scss
@@ -12,7 +12,7 @@
   display: none;
 
   @include desktop-lg {
-    display: unset;
+    display: flex;
   }
 }
 
